Bug#37027 expire_logs_days and missing binlogs cause a crash !

If the server failed to expired log files during start up it could crash.